tests/semantic/comp_types/comp_types.err
Error: Relation expects value of type x.inner but got argument of type y.inner in file comp_types.dl at line 26
relX(x) :- relY(x).
-----^--------------
Error: Relation expects value of type x.inner but got argument of type z.inner in file comp_types.dl at line 27
relX(x) :- relZ(x).
-----^--------------
Error: Relation expects value of type y.inner but got argument of type x.inner in file comp_types.dl at line 29
relY(x) :- relX(x).
-----^--------------
Error: Relation expects value of type y.inner but got argument of type z.inner in file comp_types.dl at line 31
relY(x) :- relZ(x).
-----^--------------
Error: Relation expects value of type z.inner but got argument of type x.inner in file comp_types.dl at line 33
relZ(x) :- relX(x).
-----^--------------
Error: Relation expects value of type z.inner but got argument of type y.inner in file comp_types.dl at line 34
relZ(x) :- relY(x).
-----^--------------
6 errors generated, evaluation aborted
